--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
   "dependencies": {
     "@types/mocha": "^10.0.0",
     "axios": "^0.25.0",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mocha": "^10.1.0",
     "mongoose": "^6.2.1",
     "typescript": "^4.5.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/express-session": "^1.17.5",
     "@types/node": "^16.11.21",
     "nodemon": "^2.0.15",
     "ts-node": "^10.9.1"
