--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/server.js",
-    "build": "tsc && npm run start"
+    "build": "tsc && npm run start",
+    "dev": "nodemon server.ts"
   },
   "author": "",
   "license": "ISC",
