Added session check for update message API and added edited flag to reflect true in the updated messages

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node dist/server.js",
     "build": "tsc && npm run start",
-    "dev": "nodemon server.ts"
+    "dev": "nodemon server.ts",
+    "debug": "nodemon --exec \"node --inspect-brk=0.0.0.0:9229 --require ts-node/register server.ts\""
   },
   "author": "",
   "license": "ISC",
