--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,19 +2,9 @@
   "compilerOptions": {
     "target": "es6",
     "module": "commonjs",
-    "outDir": "dist",
+    "rootDir": "./",
+    "outDir": "./build",
     "esModuleInterop": true,
-    "sourceMap": true,
-  },
-  "moduleResolution":"node",
-  "files": [
-    "server.ts",
-    "./node_modules/@types/mocha/index.d.ts",
-  ],
-  "include": [
-    "src/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+    "strict": true
+  }
 }
